--- a/src/styles/FrontBg.css
+++ b/src/styles/FrontBg.css
@@ -7,20 +7,18 @@
     url(../assets/fonts/OPTICirrus-Medium/webfonts.ffonts.net.txt);
 }
 
-h1 {
-  font-family: "OPTICirrus", sans-serif;
-}
-
 /* All elements text + image*/
-.container {
+/* .container {
   position: relative;
   text-align: center;
   color: white;
-}
+  width: 100vw;
+  height: 100vh;
+} */
 
 /* Big background image */
 .BGimg {
-  width: 100%;
+  width: 100vw;
 }
 
 /* Container that holds FIGHT WITH WSL*/
@@ -33,10 +31,12 @@ h1 {
 }
 
 /* Text individual elements*/
+/* 
 .FIGHT {
   font: bold;
   color: white;
   font-size: 100px;
+  font-family: "OPTICirrus", sans-serif;
 
   margin: 0;
   position: absolute;
@@ -48,6 +48,7 @@ h1 {
   font: bold;
   color: white;
   font-size: 100px;
+  font-family: "OPTICirrus", sans-serif;
 
   margin: 0;
   position: absolute;
@@ -58,9 +59,10 @@ h1 {
   font: bold;
   color: white;
   font-size: 100px;
+  font-family: "OPTICirrus", sans-serif;
 
   margin: 0;
   position: absolute;
   top: 250px;
   left: 280px;
-}
+} */
