--- a/src/styles/HomeStyles/Navbar.css
+++ b/src/styles/HomeStyles/Navbar.css
@@ -1,7 +1,57 @@
+.navMainContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 96px;
+  max-width: 1240px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: auto;
+  padding-right: auto;
+  color: white;
+}
+
+.logoTextContainer {
+  display: flex;
+  align-items: center;
+}
+
 .logoNav {
   display: flex;
   flex-direction: row;
-
-  /* border-right: 1px solid rgb(110, 110, 110);
-  margin */
+  padding-right: 10px;
 }
+
+.logoNav img {
+  width: 55px;
+  margin-left: 8px;
+  margin-left: 8px;
+}
+
+.textCol {
+  display: flex;
+  flex-direction: column;
+}
+
+.textCol h1 {
+  width: 100%;
+  font-size: 20px;
+  line-height: 28px;
+  font-weight: 700;
+  color: white;
+}
+
+.textCol p {
+  width: 100%;
+  color: white;
+}
+/* 
+.pagesNav {
+  
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  height: 100%;
+  border-left: 1px solid rgb(145, 145, 145);
+  padding-left: 450px;
+} */
