--- a/src/styles/HomeStyles/Upcoming.css
+++ b/src/styles/HomeStyles/Upcoming.css
@@ -29,7 +29,7 @@
 
 /* UPCOMING MATCHES CONTAINER DONT TOUCH ME */
 
-.upcoming {
+.upcomingS {
   font-family: "NEXA-Light", sans-serif;
   display: flex;
   justify-content: center;
@@ -77,6 +77,7 @@
   height: auto;
   justify-content: space-evenly;
   align-items: center;
+  font-size: 14px;
 }
 
 .currentDateContainer {
