--- a/src/styles/HomeStyles/Score.css
+++ b/src/styles/HomeStyles/Score.css
@@ -21,9 +21,14 @@
 }
 
 .matchCon {
+  color: #9c9c9c;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.matchCon p {
+  font-weight: bold;
 }
 
 .matchNum {
@@ -34,11 +39,15 @@
 }
 
 .matchInfo {
-  margin-top: 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   line-height: 450%;
+}
+
+.matchInfo p {
+  color: #9c9c9c;
 }
 
 .matchScore {
@@ -47,7 +56,19 @@
 }
 
 .matchInfoCon {
+  margin-top: 50px;
   display: flex;
   flex-direction: row;
   align-items: center;
+  gap: 50px;
+}
+
+.team1 {
+  font-size: 40px;
+  color: #9c9c9c;
+}
+
+.team2 {
+  font-size: 40px;
+  color: #9c9c9c;
 }
