--- a/src/styles/HomeStyles/Score.css
+++ b/src/styles/HomeStyles/Score.css
@@ -43,7 +43,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  line-height: 450%;
+  line-height: 500%;
 }
 
 .matchInfo p {
@@ -63,12 +63,29 @@
   gap: 50px;
 }
 
-.team1 {
+.team1,
+.team2 {
   font-size: 40px;
   color: #9c9c9c;
 }
 
-.team2 {
-  font-size: 40px;
-  color: #9c9c9c;
+.playerGoalsCont {
+  display: flex;
+  flex-direction: row;
+  gap: 300px;
+  align-items: center;
+  justify-content: center;
+  align-items: center;
+}
+
+.playerGoals1 {
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+}
+
+.playerGoals2 {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
 }
