--- a/src/styles/HomeStyles/Footer.css
+++ b/src/styles/HomeStyles/Footer.css
@@ -1,28 +1,32 @@
+@font-face {
+  font-family: NEXA-Light;
+  src: url(../../assets/fonts/NEXA-Light/NexaLight.ttf.eot),
+    url(../../assets/fonts/NEXA-Light/NexaLight.ttf.svg),
+    url(../../assets/fonts/NEXA-Light/NexaLight.ttf.woff),
+    url(../../assets/fonts/NEXA-Light/webfonts.ffonts.net.htm),
+    url(../../assets/fonts/NEXA-Light/webfonts.ffonts.net.txt);
+}
+
 .footerCont {
   width: 100vw;
-  height: 500px;
+  height: 780px;
   background-color: white;
-}
-
-.upcomingContainer {
   display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  height: 30px;
+  flex-direction: column;
 }
 
-.line {
+.lineFoot {
   position: absolute;
   border-bottom: 1px solid rgb(145, 145, 145);
-  width: 40%;
-  height: 3%;
+  width: 46%;
+  height: 15%;
 }
 
-.line.left {
+.lineFoot.left {
   left: 0;
 }
 
-.line.right {
+.lineFoot.right {
   right: 0;
 }
 
@@ -31,11 +35,47 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  /* margin-top: 50px; */
+  /* margin-top: 60px; */
 }
 
 .footerLogo {
-  margin-top: 30px;
+  display: flex;
+  align-items: center;
+  margin-top: 130px;
   width: 70px;
   height: auto;
+}
+
+.footerLogosCont {
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 120px;
+}
+
+.footerLogosImg {
+  width: 55vw;
+  margin-right: 20px;
+}
+
+.secondFootCont {
+  background-color: #f4f4f4;
+  width: 100vw;
+  height: 400px;
+}
+
+.bottomFootCont {
+  background-color: #e0e0e0;
+  width: 100vw;
+  height: 80px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.bottomFootCont p {
+  font-family: NEXA-LIGHT;
+  font-size: 14px;
 }
