--- a/src/styles/HomeStyles/Footer.css
+++ b/src/styles/HomeStyles/Footer.css
@@ -9,24 +9,23 @@
 
 .footerCont {
   width: 100vw;
-  height: 780px;
+  height: 700px;
   background-color: white;
   display: flex;
   flex-direction: column;
 }
 
-.lineFoot {
+.lineFoot2 {
   position: absolute;
   border-bottom: 1px solid rgb(145, 145, 145);
   width: 46%;
-  height: 15%;
 }
 
-.lineFoot.left {
+.lineFoot2.left {
   left: 0;
 }
 
-.lineFoot.right {
+.lineFoot2.right {
   right: 0;
 }
 
@@ -35,13 +34,13 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  /* margin-top: 60px; */
+  margin-top: 50px;
 }
 
 .footerLogo {
   display: flex;
   align-items: center;
-  margin-top: 130px;
+
   width: 70px;
   height: auto;
 }
@@ -51,7 +50,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 120px;
+  margin-top: 20px;
 }
 
 .footerLogosImg {
