--- a/src/styles/HomeStyles/Navbar.css
+++ b/src/styles/HomeStyles/Navbar.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 96px;
+  height: 100px;
   max-width: 100vw;
   margin-left: auto;
   margin-right: auto;
@@ -24,6 +24,8 @@
 .logoNav {
   display: flex;
   flex-direction: row;
+  justify-content: center;
+  align-items: center;
   padding-right: 10px;
 }
 
